# OCR-REPO

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
backend/app/api/: routes.py
backend/app/services/: __init__.py  docx_generator.py  ocr.py  pdf_extractor.py  translate.py
backend/app/utils/: __init__.py  file_handler.py  layout_schema.py  text_normalizer.py
backend/scripts/: download_models.py
backend/tests/: __init__.py  test_api.py  test_ocr.py  test_translation.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BlockHighlighter.tsx  DownloadOptions.tsx  JobStatusPage.tsx  ResultViewer.tsx  UploadPage.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/services/: api.ts
frontend/src/styles/: theme.ts
frontend/src/types/: index.ts
scripts/: init_db.sh  run_tests.sh
